logger OK console+file