@@ -18,7 +18,6 @@ import java.io.*;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static java.nio.file.StandardOpenOption.CREATE_NEW;
 
@@ -39,7 +38,7 @@ public class AvatarServiceImpl implements AvatarService {
 
     @Override
     public void uploadAvatar(long studentId, MultipartFile avatarFile) throws IOException {
-        logger.info("The UploadAvatar method was called with data " + studentId + " and " + avatarFile);
+        logger.info("The UploadAvatar method was called with data {} and {}", studentId, avatarFile);
         Student student = studentService.read(studentId);
 
         Path filePath = Path.of(avatarsDir, student.getId() + "."
@@ -69,19 +68,18 @@ public class AvatarServiceImpl implements AvatarService {
 
     @Override
     public Avatar readFromDB(long id) {
-        logger.info("The ReadFromDB method was called with data " + id);
+        logger.info("The ReadFromDB method was called with data {}", id);
         Avatar readedAvatar = avatarRepository.findByStudent_id(id).orElseThrow(() -> new AvatarException("Avatar not found"));
-        logger.info("Returned from the ReadFromDB method avatar (id): " + readedAvatar.getId());
+        logger.info("Returned from the ReadFromDB method avatar (id) {}", readedAvatar.getId());
         return readedAvatar;
     }
 
     @Override
     public List<Avatar> getAvatarsPage(int pageNumber, int pageSize) {
-        logger.info("The GetAvatarsPage method was called with data: number of page: " + pageNumber
-                + " and size of page " + pageSize);
+        logger.info("The GetAvatarsPage method was called with data: number of page {} and size of page {}", pageNumber, pageSize);
         PageRequest pageRequest = PageRequest.of(pageNumber - 1, pageSize);
         List<Avatar> avatars = avatarRepository.findAll(pageRequest).getContent();
-        logger.info("Returned from the ReadFromDB method list of avatars (id): " + avatars.stream().map(Avatar::getId).collect(Collectors.toList()));
+        logger.info("Returned from the ReadFromDB method list of avatars (id) {}", avatars.stream().map(Avatar::getId).toList());
         return avatars;
     }
 
